src/TigerParser.java
// $ANTLR 3.5.1 grammar/Tiger.g 2014-11-05 14:01:46

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class TigerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARRAY", "ASSIGN", "BEGIN", 
		"BLOCK", "BLOCKS", "BREAK", "COLON", "COMMA", "COMMENT", "CONSTANT", "DIMENSION", 
		"DIV", "DO", "ELSE", "END", "ENDDO", "ENDIF", "EQ", "EXPR", "EXPRS", "FIXEDPT", 
		"FIXEDPTLIT", "FOR", "FUNC", "FUNCS", "FUNCTION", "GEQ", "GREATER", "ID", 
		"IDS", "IF", "INT", "INTLIT", "INVOKE", "LBRACK", "LEQ", "LESSER", "LPAREN", 
		"MAIN", "MINUS", "MULT", "NEQ", "OF", "OR", "PARAM", "PARAMS", "PLUS", 
		"PROGRAM", "RBRACK", "REFERENCE", "RETURN", "RPAREN", "SEMI", "STATEMENTS", 
		"THEN", "TO", "TYPE", "TYPES", "VAR", "VARS", "VOID", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int ARRAY=5;
	public static final int ASSIGN=6;
	public static final int BEGIN=7;
	public static final int BLOCK=8;
	public static final int BLOCKS=9;
	public static final int BREAK=10;
	public static final int COLON=11;
	public static final int COMMA=12;
	public static final int COMMENT=13;
	public static final int CONSTANT=14;
	public static final int DIMENSION=15;
	public static final int DIV=16;
	public static final int DO=17;
	public static final int ELSE=18;
	public static final int END=19;
	public static final int ENDDO=20;
	public static final int ENDIF=21;
	public static final int EQ=22;
	public static final int EXPR=23;
	public static final int EXPRS=24;
	public static final int FIXEDPT=25;
	public static final int FIXEDPTLIT=26;
	public static final int FOR=27;
	public static final int FUNC=28;
	public static final int FUNCS=29;
	public static final int FUNCTION=30;
	public static final int GEQ=31;
	public static final int GREATER=32;
	public static final int ID=33;
	public static final int IDS=34;
	public static final int IF=35;
	public static final int INT=36;
	public static final int INTLIT=37;
	public static final int INVOKE=38;
	public static final int LBRACK=39;
	public static final int LEQ=40;
	public static final int LESSER=41;
	public static final int LPAREN=42;
	public static final int MAIN=43;
	public static final int MINUS=44;
	public static final int MULT=45;
	public static final int NEQ=46;
	public static final int OF=47;
	public static final int OR=48;
	public static final int PARAM=49;
	public static final int PARAMS=50;
	public static final int PLUS=51;
	public static final int PROGRAM=52;
	public static final int RBRACK=53;
	public static final int REFERENCE=54;
	public static final int RETURN=55;
	public static final int RPAREN=56;
	public static final int SEMI=57;
	public static final int STATEMENTS=58;
	public static final int THEN=59;
	public static final int TO=60;
	public static final int TYPE=61;
	public static final int TYPES=62;
	public static final int VAR=63;
	public static final int VARS=64;
	public static final int VOID=65;
	public static final int WHILE=66;
	public static final int WS=67;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public TigerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public TigerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return TigerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "grammar/Tiger.g"; }


	    private  java.util.List<String> errors = new java.util.LinkedList<String>();
	    public   void displayRecognitionError(String[] tokenNames,
	                                        RecognitionException e) {
	        String hdr = getErrorHeader(e);
	        String msg = getErrorMessage(e, tokenNames);
	        errors.add(hdr + " " + msg + "            Character at which the error occurred: " +  "['" + Character.toString((char)e.c) + "']");
	    }
	    public java.util.List<String> getErrors() {
	        return errors;
	    }


	public static class tiger_program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "tiger_program"
	// grammar/Tiger.g:73:1: tiger_program : ( type_declaration_list function_declaration_list EOF ) -> ^( PROGRAM ^( TYPES ( type_declaration_list )? ) ^( FUNCS function_declaration_list ) ) ;
	public final TigerParser.tiger_program_return tiger_program() throws RecognitionException {
		TigerParser.tiger_program_return retval = new TigerParser.tiger_program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF3=null;
		ParserRuleReturnScope type_declaration_list1 =null;
		ParserRuleReturnScope function_declaration_list2 =null;

		Object EOF3_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_function_declaration_list=new RewriteRuleSubtreeStream(adaptor,"rule function_declaration_list");
		RewriteRuleSubtreeStream stream_type_declaration_list=new RewriteRuleSubtreeStream(adaptor,"rule type_declaration_list");

		try {
			// grammar/Tiger.g:74:2: ( ( type_declaration_list function_declaration_list EOF ) -> ^( PROGRAM ^( TYPES ( type_declaration_list )? ) ^( FUNCS function_declaration_list ) ) )
			// grammar/Tiger.g:74:4: ( type_declaration_list function_declaration_list EOF )
			{
			// grammar/Tiger.g:74:4: ( type_declaration_list function_declaration_list EOF )
			// grammar/Tiger.g:74:5: type_declaration_list function_declaration_list EOF
			{
			pushFollow(FOLLOW_type_declaration_list_in_tiger_program166);
			type_declaration_list1=type_declaration_list();
			state._fsp--;

			stream_type_declaration_list.add(type_declaration_list1.getTree());
			pushFollow(FOLLOW_function_declaration_list_in_tiger_program168);
			function_declaration_list2=function_declaration_list();
			state._fsp--;

			stream_function_declaration_list.add(function_declaration_list2.getTree());
			EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_tiger_program170);  
			stream_EOF.add(EOF3);

			}

			// AST REWRITE
			// elements: type_declaration_list, function_declaration_list
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 74:58: -> ^( PROGRAM ^( TYPES ( type_declaration_list )? ) ^( FUNCS function_declaration_list ) )
			{
				// grammar/Tiger.g:74:61: ^( PROGRAM ^( TYPES ( type_declaration_list )? ) ^( FUNCS function_declaration_list ) )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);
				// grammar/Tiger.g:74:71: ^( TYPES ( type_declaration_list )? )
				{
				Object root_2 = (Object)adaptor.nil();
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(TYPES, "TYPES"), root_2);
				// grammar/Tiger.g:74:79: ( type_declaration_list )?
				if ( stream_type_declaration_list.hasNext() ) {
					adaptor.addChild(root_2, stream_type_declaration_list.nextTree());
				}
				stream_type_declaration_list.reset();

				adaptor.addChild(root_1, root_2);
				}

				// grammar/Tiger.g:74:103: ^( FUNCS function_declaration_list )
				{
				Object root_2 = (Object)adaptor.nil();
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNCS, "FUNCS"), root_2);
				adaptor.addChild(root_2, stream_function_declaration_list.nextTree());
				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "tiger_program"


	public static class type_declaration_list_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "type_declaration_list"
	// grammar/Tiger.g:81:1: type_declaration_list : ( ( TYPE ID EQ type SEMI type_declaration_list ) -> ^( TYPE ID type ) ( type_declaration_list )? |);
	public final TigerParser.type_declaration_list_return type_declaration_list() throws RecognitionException {
		TigerParser.type_declaration_list_return retval = new TigerParser.type_declaration_list_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token TYPE4=null;
		Token ID5=null;
		Token EQ6=null;
		Token SEMI8=null;
		ParserRuleReturnScope type7 =null;
		ParserRuleReturnScope type_declaration_list9 =null;

		Object TYPE4_tree=null;
		Object ID5_tree=null;
		Object EQ6_tree=null;
		Object SEMI8_tree=null;
		RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_EQ=new RewriteRuleTokenStream(adaptor,"token EQ");
		RewriteRuleTokenStream stream_TYPE=new RewriteRuleTokenStream(adaptor,"token TYPE");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
		RewriteRuleSubtreeStream stream_type_declaration_list=new RewriteRuleSubtreeStream(adaptor,"rule type_declaration_list");

		try {
			// grammar/Tiger.g:82:2: ( ( TYPE ID EQ type SEMI type_declaration_list ) -> ^( TYPE ID type ) ( type_declaration_list )? |)
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==TYPE) ) {
				alt1=1;
			}
			else if ( (LA1_0==EOF||LA1_0==BEGIN||LA1_0==BREAK||LA1_0==FIXEDPT||LA1_0==FOR||LA1_0==ID||(LA1_0 >= IF && LA1_0 <= INT)||LA1_0==RETURN||LA1_0==VAR||(LA1_0 >= VOID && LA1_0 <= WHILE)) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// grammar/Tiger.g:82:4: ( TYPE ID EQ type SEMI type_declaration_list )
					{
					// grammar/Tiger.g:82:4: ( TYPE ID EQ type SEMI type_declaration_list )
					// grammar/Tiger.g:82:5: TYPE ID EQ type SEMI type_declaration_list
					{
					TYPE4=(Token)match(input,TYPE,FOLLOW_TYPE_in_type_declaration_list206);  
					stream_TYPE.add(TYPE4);

					ID5=(Token)match(input,ID,FOLLOW_ID_in_type_declaration_list208);  
					stream_ID.add(ID5);

					EQ6=(Token)match(input,EQ,FOLLOW_EQ_in_type_declaration_list210);  
					stream_EQ.add(EQ6);

					pushFollow(FOLLOW_type_in_type_declaration_list212);
					type7=type();
					state._fsp--;

					stream_type.add(type7.getTree());
					SEMI8=(Token)match(input,SEMI,FOLLOW_SEMI_in_type_declaration_list214);  
					stream_SEMI.add(SEMI8);

					pushFollow(FOLLOW_type_declaration_list_in_type_declaration_list216);
					type_declaration_list9=type_declaration_list();
					state._fsp--;

					stream_type_declaration_list.add(type_declaration_list9.getTree());
					}

					// AST REWRITE
					// elements: type, ID, type_declaration_list, TYPE
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 82:49: -> ^( TYPE ID type ) ( type_declaration_list )?
					{
						// grammar/Tiger.g:82:52: ^( TYPE ID type )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot(stream_TYPE.nextNode(), root_1);
						adaptor.addChild(root_1, stream_ID.nextNode());
						adaptor.addChild(root_1, stream_type.nextTree());
						adaptor.addChild(root_0, root_1);
						}

						// grammar/Tiger.g:82:68: ( type_declaration_list )?
						if ( stream_type_declaration_list.hasNext() ) {
							adaptor.addChild(root_0, stream_type_declaration_list.nextTree());
						}
						stream_type_declaration_list.reset();

					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					// grammar/Tiger.g:84:2: 
					{
					root_0 = (Object)adaptor.nil();


					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type_declaration_list"


	public static class function_declaration_list_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "function_declaration_list"
	// grammar/Tiger.g:86:1: function_declaration_list : ( ( return_type ( FUNCTION name= ID |name= MAIN ) LPAREN param_list RPAREN BEGIN block_list END SEMI ) function_declaration_list -> ^( FUNC return_type $name ^( PARAMS ( param_list )? ) ^( BLOCKS block_list ) ) ( function_declaration_list )? |);
	public final TigerParser.function_declaration_list_return function_declaration_list() throws RecognitionException {
		TigerParser.function_declaration_list_return retval = new TigerParser.function_declaration_list_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token name=null;
		Token FUNCTION11=null;
		Token LPAREN12=null;
		Token RPAREN14=null;
		Token BEGIN15=null;
		Token END17=null;
		Token SEMI18=null;
		ParserRuleReturnScope return_type10 =null;
		ParserRuleReturnScope param_list13 =null;
		ParserRuleReturnScope block_list16 =null;
		ParserRuleReturnScope function_declaration_list19 =null;

		Object name_tree=null;
		Object FUNCTION11_tree=null;
		Object LPAREN12_tree=null;
		Object RPAREN14_tree=null;
		Object BEGIN15_tree=null;
		Object END17_tree=null;
		Object SEMI18_tree=null;
		RewriteRuleTokenStream stream_LPAREN=new RewriteRuleTokenStream(adaptor,"token LPAREN");
		RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
		RewriteRuleTokenStream stream_MAIN=new RewriteRuleTokenStream(adaptor,"token MAIN");
		RewriteRuleTokenStream stream_END=new RewriteRuleTokenStream(adaptor,"token END");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_RPAREN=new RewriteRuleTokenStream(adaptor,"token RPAREN");
		RewriteRuleTokenStream stream_BEGIN=new RewriteRuleTokenStream(adaptor,"token BEGIN");
		RewriteRuleTokenStream stream_FUNCTION=new RewriteRuleTokenStream(adaptor,"token FUNCTION");
		RewriteRuleSubtreeStream stream_return_type=new RewriteRuleSubtreeStream(adaptor,"rule return_type");
		RewriteRuleSubtreeStream stream_function_declaration_list=new RewriteRuleSubtreeStream(adaptor,"rule function_declaration_list");
		RewriteRuleSubtreeStream stream_block_list=new RewriteRuleSubtreeStream(adaptor,"rule block_list");
		RewriteRuleSubtreeStream stream_param_list=new RewriteRuleSubtreeStream(adaptor,"rule param_list");

		try {
			// grammar/Tiger.g:87:2: ( ( return_type ( FUNCTION name= ID |name= MAIN ) LPAREN param_list RPAREN BEGIN block_list END SEMI ) function_declaration_list -> ^( FUNC return_type $name ^( PARAMS ( param_list )? ) ^( BLOCKS block_list ) ) ( function_declaration_list )? |)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==FIXEDPT||LA3_0==ID||LA3_0==INT||LA3_0==VOID) ) {
				alt3=1;
			}
			else if ( (LA3_0==EOF) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// grammar/Tiger.g:87:4: ( return_type ( FUNCTION name= ID |name= MAIN ) LPAREN param_list RPAREN BEGIN block_list END SEMI ) function_declaration_list
					{
					// grammar/Tiger.g:87:4: ( return_type ( FUNCTION name= ID |name= MAIN ) LPAREN param_list RPAREN BEGIN block_list END SEMI )
					// grammar/Tiger.g:87:5: return_type ( FUNCTION name= ID |name= MAIN ) LPAREN param_list RPAREN BEGIN block_list END SEMI
					{
					pushFollow(FOLLOW_return_type_in_function_declaration_list245);
					return_type10=return_type();
					state._fsp--;

					stream_return_type.add(return_type10.getTree());
					// grammar/Tiger.g:87:17: ( FUNCTION name= ID |name= MAIN )
					int alt2=2;
					int LA2_0 = input.LA(1);
					if ( (LA2_0==FUNCTION) ) {
						alt2=1;
					}
					else if ( (LA2_0==MAIN) ) {
						alt2=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 2, 0, input);
						throw nvae;
					}

					switch (alt2) {
						case 1 :
							// grammar/Tiger.g:87:18: FUNCTION name= ID
							{
							FUNCTION11=(Token)match(input,FUNCTION,FOLLOW_FUNCTION_in_function_declaration_list248);  
							stream_FUNCTION.add(FUNCTION11);

							name=(Token)match(input,ID,FOLLOW_ID_in_function_declaration_list252);  
							stream_ID.add(name);

							}
							break;
						case 2 :
							// grammar/Tiger.g:87:37: name= MAIN
							{
							name=(Token)match(input,MAIN,FOLLOW_MAIN_in_function_declaration_list258);  
							stream_MAIN.add(name);

							}
							break;

					}

					LPAREN12=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_function_declaration_list261);  
					stream_LPAREN.add(LPAREN12);

					pushFollow(FOLLOW_param_list_in_function_declaration_list263);
					param_list13=param_list();
					state._fsp--;

					stream_param_list.add(param_list13.getTree());
					RPAREN14=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_function_declaration_list265);  
					stream_RPAREN.add(RPAREN14);

					BEGIN15=(Token)match(input,BEGIN,FOLLOW_BEGIN_in_function_declaration_list267);  
					stream_BEGIN.add(BEGIN15);

					pushFollow(FOLLOW_block_list_in_function_declaration_list269);
					block_list16=block_list();
					state._fsp--;

					stream_block_list.add(block_list16.getTree());
					END17=(Token)match(input,END,FOLLOW_END_in_function_declaration_list271);  
					stream_END.add(END17);

					SEMI18=(Token)match(input,SEMI,FOLLOW_SEMI_in_function_declaration_list273);  
					stream_SEMI.add(SEMI18);

					}

					pushFollow(FOLLOW_function_declaration_list_in_function_declaration_list276);
					function_declaration_list19=function_declaration_list();
					state._fsp--;

					stream_function_declaration_list.add(function_declaration_list19.getTree());
					// AST REWRITE
					// elements: param_list, block_list, return_type, name, function_declaration_list
					// token labels: name
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleTokenStream stream_name=new RewriteRuleTokenStream(adaptor,"token name",name);
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 87:126: -> ^( FUNC return_type $name ^( PARAMS ( param_list )? ) ^( BLOCKS block_list ) ) ( function_declaration_list )?
					{
						// grammar/Tiger.g:87:129: ^( FUNC return_type $name ^( PARAMS ( param_list )? ) ^( BLOCKS block_list ) )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNC, "FUNC"), root_1);
						adaptor.addChild(root_1, stream_return_type.nextTree());
						adaptor.addChild(root_1, stream_name.nextNode());
						// grammar/Tiger.g:87:154: ^( PARAMS ( param_list )? )
						{
						Object root_2 = (Object)adaptor.nil();
						root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(PARAMS, "PARAMS"), root_2);
						// grammar/Tiger.g:87:163: ( param_list )?
						if ( stream_param_list.hasNext() ) {
							adaptor.addChild(root_2, stream_param_list.nextTree());
						}
						stream_param_list.reset();

						adaptor.addChild(root_1, root_2);
						}

						// grammar/Tiger.g:87:176: ^( BLOCKS block_list )
						{
						Object root_2 = (Object)adaptor.nil();
						root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(BLOCKS, "BLOCKS"), root_2);
						adaptor.addChild(root_2, stream_block_list.nextTree());
						adaptor.addChild(root_1, root_2);
						}

						adaptor.addChild(root_0, root_1);
						}

						// grammar/Tiger.g:87:198: ( function_declaration_list )?
						if ( stream_function_declaration_list.hasNext() ) {
							adaptor.addChild(root_0, stream_function_declaration_list.nextTree());
						}
						stream_function_declaration_list.reset();

					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					// grammar/Tiger.g:89:2: 
					{
					root_0 = (Object)adaptor.nil();


					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "function_declaration_list"


	public static class var_declaration_list_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "var_declaration_list"
	// grammar/Tiger.g:91:1: var_declaration_list : ( ( VAR id_list COLON type_id ( ASSIGN constant )? SEMI var_declaration_list ) -> ^( VAR ^( IDS id_list ) type_id ( constant )? ) ( var_declaration_list )? |);
	public final TigerParser.var_declaration_list_return var_declaration_list() throws RecognitionException {
		TigerParser.var_declaration_list_return retval = new TigerParser.var_declaration_list_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token VAR20=null;
		Token COLON22=null;
		Token ASSIGN24=null;
		Token SEMI26=null;
		ParserRuleReturnScope id_list21 =null;
		ParserRuleReturnScope type_id23 =null;
		ParserRuleReturnScope constant25 =null;
		ParserRuleReturnScope var_declaration_list27 =null;
